[gd_scene load_steps=4 format=3 uid="uid://blfmlj6kctvcq"]

[ext_resource type="Script" path="res://plate/arrow_plate.gd" id="1_6jr5p"]
[ext_resource type="Texture2D" uid="uid://3qrluqfdliki" path="res://assets/plate.png" id="2_gpf5n"]
[ext_resource type="AudioStream" uid="uid://chqdl16g6kil3" path="res://sound/select_place_plate.wav" id="3_u3ko6"]

[node name="ArrowPlate" type="Area2D"]
script = ExtResource("1_6jr5p")
plate_type = 1

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 8)

[node name="RotateOrSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_u3ko6")
volume_db = -6.954

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_gpf5n")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
